--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aperture
 spring.datasource.username=root
 spring.datasource.password=
 
-#ddl-auto : create :if the schema(table structure) exist, drop that structure and recreate it
-#ddl-auto : update :if the schema(table structure) exist use it, otherwise create new table
+#ddl-auto : update :if the schema(table structure) exists then use it, otherwise create a new table
 spring.jpa.hibernate.ddl-auto=update
 
 #Responsible for converting JPQL(Java Persistence Query Language) in MySQL
@@ -14,10 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #Display generated SQL queries on console
 spring.jpa.show-sql=true
 
-#create all the queries by picking the names mentioned in mapping , default SpringBoot2 creates query by seperating property names with '_' (underscore)
+#Create all the queries by selecting the names mentioned in mapping , default SpringBoot2 creates query by seperating property names with '_' (underscore)
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#Enable lazy loading with hibernate annotations
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-
+#Port that the application runs on
 server.port=8082
