--- a/ApertureHome/src/main/resources/application.properties
+++ b/ApertureHome/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aperture
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=D0e!1234
 
 #ddl-auto : update :if the schema(table structure) exists then use it, otherwise create a new table
 spring.jpa.hibernate.ddl-auto=update
