--- a/ApertureHome/src/main/resources/application.properties
+++ b/ApertureHome/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 #Connecting to the database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aperture
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=${SQL_URL}
+spring.datasource.username=${SQL_USER}
+spring.datasource.password=${SQL_PASSWORD}
 
-#ddl-auto : update :if the schema(table structure) exists then use it, otherwise create a new table
+#ddl-auto : update.css :if the schema(table structure) exists then use it, otherwise create a new table
 spring.jpa.hibernate.ddl-auto=update
 
 #Responsible for converting JPQL(Java Persistence Query Language) in MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #Display generated SQL queries on console
-spring.jpa.show-sql=true
+#spring.jpa.show-sql: true
 
-#Create all the queries by selecting the names mentioned in mapping , default SpringBoot2 creates query by seperating property names with '_' (underscore)
+#Create all the queries by selecting the names mentioned in mapping , default SpringBoot2 creates
+# query by separating property names with '_' (underscore)
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #Enable lazy loading with hibernate annotations
